Completing initial MAP Rework